# semantic_sommeliers

./: .gitignore  LICENSE.md  README.md  batch_run.py  batch_run_parallel.py  config.py  current_issues.txt  experiments.py  experiments_OLD.py  main.py  pyproject.toml  qa_utilities.py  requirements.txt  run_experiments.py  run_experiments_parallel.py  schema.json  slurm.sh  slurm_cmi.sh  slurm_mit.sh  summary.py
.ipynb_checkpoints/: experiments-checkpoint.ipynb  experiments-checkpoint.py
code/: HuggingFace.ipynb  audio.rttm  detect2.py  detect_tasks.py  stimuli_curation.py  transcribe_segment.py  utility.py
code/my_utils/: json_to_label.py  semantic_similarity.py  utility.py  vtc_to_audacity.py  whisperx_wrapper.py
old/: notebook.ipynb
src/: batch_run.py  config.py  main.py
utility/: stimuli_curation.py  utility.py  vid_util.py
utils/: audio_util.py  dupe.py  general_util.py  qa_utilities.py  text_util.py
